add more sounds, make player lists nicer, add optional alerts for disconnected needed clients, add better error diagnosis, add client event validation, show impostor names on end screen

--- a/client/src/assets/styles/global.css
+++ b/client/src/assets/styles/global.css
@@ -49,3 +49,13 @@ p {
 .flash-text {
     animation: flash 1s infinite;
 }
+
+*::-webkit-scrollbar {
+    width: 5px;
+    background-color: white;
+    border-radius: 10px;
+}
+*::-webkit-scrollbar-thumb {
+    background-color: #7C979D;
+    border-radius: 10px;
+}
